examples/good/in/05-01-while.see
void main() {
    int t = 5;
    while (t > 0) {
        printInt(t);
        t--;
    }

    return;
}
