examples/bad/05-01-while.see
void main() {
    while (t--) { // valid c++ code...
        printInt(t);
    }

    return;
}
